@@ -3,12 +3,11 @@ let Node = require("./Node.js");
 let Interpreter = class {
 	constructor(filename) {
 		this.filename = filename;
-		// this.ast = ast;
 	}
 
 	// ---------------------------------------------------------------
 
-	eval_Primary(node) {
+	Primary(node) {
 		switch (node.getType()) {
 
 			// Yup, the "Node.Type.TYPE"-s used to be strings like "Number" and "Program"
@@ -16,28 +15,31 @@ let Interpreter = class {
 			// Values
 			case Node.Type.Number: return { type: "number", value: node.getValue() };
 			case Node.Type.String: return { type: "string", value: node.getValue() };
-			case Node.Type.Literal:
-				if (["true", "false"].includes(node.getValue()))
-					return { type: "boolean", value: ( node.getValue() == "true" ) };
-				return { type: node.getValue(), value: null };
+			case Node.Type.Literal: return this.Literal();
 
 			// Stmt
 			// Expr
-			case Node.Type.BinaryExpr: return this.eval_BinaryExpr(node);
+			case Node.Type.BinaryExpr: return this.BinaryExpr(node);
 
 			// Misc.
-			case Node.Type.Program: return this.eval_Program(node);
+			case Node.Type.Program: return this.Program(node);
 		}
 	}
 
 	// ---------------------------------------------------------------
 
 	// Values
+	Literal(expr) {
+		if (["true", "false"].includes(expr.getValue()))
+			return { type: "boolean", value: ( expr.getValue() == "true" ) };
+
+		return { type: expr.getValue(), value: null };
+	}
 	// Statements
 	// Expressions
-	eval_BinaryExpr(expr) {
-		let left = this.eval_Primary(expr.left);
-		let right = this.eval_Primary(expr.right);
+	BinaryExpr(expr) {
+		let left = this.Primary(expr.left);
+		let right = this.Primary(expr.right);
 		let operator = expr.operator;
 
 		let type = "";
@@ -49,8 +51,9 @@ let Interpreter = class {
 			case "*": result = left.value * right.value; break;
 			case "/": result = left.value / right.value; break;
 			case "%": result = left.value % right.value; break;
-			case "^": result = left.value ^ right.value; break;
-			case "**": result = left.value ** right.value; break;
+			case "^": result = left.value ** right.value; break;
+			// case "^": result = left.value ^ right.value; break;
+			// case "**": result = left.value ** right.value; break;
 		}
 
 		// switch (typeof(result)) {
@@ -64,12 +67,12 @@ let Interpreter = class {
 	}
 
 	// Misc.
-	eval_Program(program) {
+	Program(program) {
 		let last = null;
 
 		for (let i = 0; i < program.body.length; i += 1) {
 			let node = program.body[i];
-			last = this.eval_Primary(node);
+			last = this.Primary(node);
 		}
 
 		return last;
