@@ -1,1 +1,1 @@
-10 + 5 ^ 2
+(10 + 5) ^ 2
